fix timer spacing

--- a/style.css
+++ b/style.css
@@ -477,8 +477,7 @@ footer {
   #container {
     max-width: 100%;
     height: 80%;
-    margin: 0 auto;
-    margin-top: 3rem;
+    margin: 30% auto;
     display: inline-block;
     text-align: left;
   }
